<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".BookingActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/booking_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/booking_text"
            android:textSize="22dp"/>
        <TextView
            android:id="@+id/booking_conference_room_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/booking_conference_room_text"
            android:textSize="22dp"/>

    </LinearLayout>

    <EditText
        android:id="@+id/date_from_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/date_from_text" />
    <EditText
        android:id="@+id/time_from_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/time_from_text" />
    <EditText
        android:id="@+id/date_to_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/date_to_text" />
    <EditText
        android:id="@+id/time_to_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/time_to_text" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/book_for_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:text="@string/book_for_text">
        </TextView>

        <Spinner
            android:id="@+id/book_for_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        </LinearLayout>
    <Button
        android:id="@+id/book_room_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="bookRoomButtonHandler"
        android:text="@string/book_room_button"/>
</LinearLayout>