<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    tools:context=".RegisterActivity">

  <TextView
      android:id="@+id/sign_up_for_an_account_text"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      android:text="@string/sign_up_for_an_account_text"
      android:textSize="24dp"
      android:textStyle="bold">
  </TextView>

  <EditText
      android:id="@+id/sign_up_username_edit_text"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="96dp"
      android:hint="@string/username_edit_text"
      android:selectAllOnFocus="true"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"/>

  <EditText
      android:id="@+id/sign_up_password_edit_text"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:hint="@string/password_edit_text"
      android:inputType="textPassword"
      android:selectAllOnFocus="true"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/sign_up_username_edit_text" />

  <Button
      android:id="@+id/sign_up_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="left"
      android:layout_marginTop="16dp"
      android:layout_marginBottom="64dp"
      android:text="@string/sign_up_button"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/sign_up_password_edit_text"
      app:layout_constraintVertical_bias="0.2" />

  <TextView
      android:id="@+id/sign_up_already_have_account_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/sign_up_button"
      android:text="@string/login_text"
      android:layout_marginTop="10dp"
      android:textSize="18dp"
      android:textStyle="bold">
  </TextView>

  <Button
      android:id="@+id/login_at_sign_up_screen_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="left"
      android:layout_marginTop="16dp"
      android:layout_marginBottom="64dp"
      android:text="@string/login_button"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/sign_up_button"
      app:layout_constraintVertical_bias="0.2" />



</androidx.constraintlayout.widget.ConstraintLayout>