<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:gravity="center"
    tools:context=".ConferenceRoomActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:text="@string/conference_room_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="30dp"
            android:padding="16dp"
            android:background="@color/purple_200"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/add_conference_room_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_conference_room_button" />

            <Button
                android:id="@+id/delete_conference_room_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete_conference_room_button" />

            <Button
                android:id="@+id/book_conference_room_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/book_conference_room_button" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ListView
                android:id="@+id/conference_room_list"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:clickable="true" />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>